updated fixed some errors in swagger
